--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 
 
        <div class="credit">Created by
-           <a href="https://www.youtube.com/channel/UCK5YMqyy_fjAtwgu9hjxXJg" target="_blank"><span>Donald Diaz</span> | All Rights Reserved</a>
+           <a href="#"><span>Donald Diaz</span> | All Rights Reserved</a>
        </div>
    </section>
 
